--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 @import "../bower_components/normalize-scss/_normalize.scss";
 @import "../bower_components/typeplate-starter-kit/css/_typeplate.scss";
 @import "./mixins.scss";
-
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+//@import url("http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700");
 /**
  * BOX-SIZING
  */
@@ -9,7 +10,6 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
 /**
  * GRIDS
  */
@@ -20,7 +20,6 @@
     font-size: 0;
     text-align: justify;
     position: relative;
-
     & > * {
         font-size: medium;
         text-align: left;
@@ -28,7 +27,6 @@
         width: 100%;
         vertical-align: top;
     }
-
     &:after {
         display: inline-block;
         width: 100%;
@@ -36,16 +34,127 @@
         font-size: medium;
     }
 }
-
 @include gridify(2, 400);
 @include gridify(4, 600);
-
 /**
  * GENERAL
  */
-
-img {max-width:100;}
-
+html {
+	height: 100%;
+	transition: opacity .4s ease;
+}
+img {
+    max-width: 100;
+}
 body {
-    transition: opacity .25s ease;
+    position: relative;
+    min-height: 100%;
+    max-width: 60em;
+    margin: 0 auto;
+    font-family: "Open Sans";
+    //font-size: 90%;
+    font-weight: 400;
+}
+.userMenu {
+			position: relative;
+			transition: top .5s ease;
+			text-align: center;
+			margin-bottom: 2em;
+			padding-bottom: .3em;
+	& > div {
+		display: inline-block;
+		font-size: .8em;
+		padding-top: .8em;
+		a {
+			border-right: 1px solid #999;
+			padding: 0 .4em;
+		}
+		&:last-child {
+			border-right: 0;
+		}
+		&:target a {
+			color: #111  ;
+			font-weight: 600;
+		}
+	}
+}
+a {
+    text-decoration: none;
+    color: #444;
+}
+h1 {
+    font-size: 2em;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+h2 {
+    font-size: 1.2em;
+    margin-bottom: 0;
+    font-weight: 400;
+}
+h3 {
+    font-size: .8em;
+    margin-bottom: 0;
+    font-weight: 400;
+}
+h4 {
+	font-size: .7em;
+	margin-bottom: 0;
+	font-weight: 400;
+}
+main {
+	position: relative;
+	transition: left .5s ease;
+}
+.user {
+		position: absolute;
+		left: 0;
+    width: 13em;
+    margin-left: 1em;
+    & > img {
+        max-width: 13em;
+        margin: 0 auto .5em;
+        display: block;
+        border-radius: .5em;
+    }
+    h2 {
+        padding-bottom: 1em;
+        border-bottom: 1px solid #ccc;
+        margin-bottom: 1em;
+    }
+    h3 {
+        margin-bottom: .5em;
+    }
+}
+.repoList {
+    margin-left: 15em;
+    padding: 0 1em;
+    & > div {
+        margin-bottom: 1.5em;
+        padding-bottom: 1.5em;
+        border-bottom: 1px solid #ccc;
+        position: relative;
+        &:first-child {
+            padding-top: 1.5em;
+            border-top: 1px solid #ccc;
+        }
+        h2, h4 {
+            font-weight: 700;
+        }
+        h2 {
+        	margin-bottom: .5em;
+        }
+        h4 {
+            position: absolute;
+            right: 0;
+            bottom: 4em;
+            color: #888;
+        }
+        a {
+            color: #0645AD;
+            & > * {
+                color: inherit;
+            }
+        }
+    }
 }
