--- a/templates/repos.html
+++ b/templates/repos.html
@@ -3,5 +3,5 @@
     <h2><%= name %></h2>
   </a>
   <h4><%= language %>&nbsp;&nbsp;&nbsp;*-<%= stargazers_count %>&nbsp;&nbsp;&nbsp;Y-<%= forks_count %></h4>
-<!--   <h3>Updated <%= updated_at %></h3> -->
+<h3>Updated <%= updated_at %></h3>
 </div>
