--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,7 +69,7 @@ body {
 			border-right: 1px solid #999;
 			padding: 0 .4em;
 		}
-		&:last-child {
+		&:last-child a {
 			border-right: 0;
 		}
 		&:target a {
